# Selfhealingragpipeline

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml
data/: demo_questions.json
data/sample_docs/: self_healing_rag_notes.md
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  FREE_TIER_SHOWCASE.md
frontend/: index.html  package.json
frontend/src/: App.tsx  api.ts  styles.css
src/self_healing_rag/: __init__.py  api.py  cli.py  config.py  documents.py  evaluation.py  graph.py  index.py  llm.py  nodes.py  retrieval.py  state.py  vector_store.py
src/self_healing_rag/web/: app.js  index.html  styles.css
tests/: test_api.py  test_documents.py  test_evaluation.py  test_llm.py  test_nodes.py  test_rerank.py  test_retrieval.py
