[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-healing-rag"
version = "0.1.0"
description = "A LangGraph-based RAG pipeline that critiques and repairs its own answers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb",
    "fastapi",
    "langchain",
    "langchain-chroma",
    "langchain-community",
    "langchain-openai",
    "langgraph",
    "pydantic-settings",
    "pypdf",
    "python-dotenv",
    "typer",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.scripts]
self-healing-rag = "self_healing_rag.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
self_healing_rag = ["web/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
